@@ -5,14 +5,12 @@ import org.springframework.context.annotation.Configuration;
 import springfox.documentation.builders.ApiInfoBuilder;
 import springfox.documentation.builders.PathSelectors;
 import springfox.documentation.builders.RequestHandlerSelectors;
-import springfox.documentation.service.ApiInfo;
-import springfox.documentation.service.ApiKey;
-import springfox.documentation.service.AuthorizationScope;
-import springfox.documentation.service.SecurityReference;
+import springfox.documentation.service.*;
 import springfox.documentation.spi.DocumentationType;
 import springfox.documentation.spi.service.contexts.SecurityContext;
 import springfox.documentation.spring.web.plugins.Docket;
 
+import java.util.Collections;
 import java.util.List;
 
 @Configuration
@@ -22,7 +20,7 @@ public class SwaggerConfig {
         return new Docket(DocumentationType.OAS_30)
                 .useDefaultResponseMessages(false)
                 .securityContexts(List.of(securityContext()))
-                .securitySchemes(List.of(apiKey()))
+                .securitySchemes(Collections.singletonList(securitySchema()))
                 .select()
                     .apis(RequestHandlerSelectors.basePackage("com.haenggu.controller"))
                     .paths(PathSelectors.ant("/api/**"))
@@ -39,7 +37,7 @@ public class SwaggerConfig {
     }
 
     private ApiKey apiKey() {
-        return new ApiKey("JWT", "Authorization", "header");
+        return new ApiKey("Authorization", "Authorization", "header");
     }
 
     private SecurityContext securityContext() {
@@ -51,11 +49,15 @@ public class SwaggerConfig {
                 .build();
     }
 
+    private HttpAuthenticationScheme securitySchema() {
+        return HttpAuthenticationScheme.JWT_BEARER_BUILDER.name("JWT Token").build();
+    }
+
     private List<SecurityReference> defaultAuth() {
         AuthorizationScope authorizationScope = new AuthorizationScope("global", "accessEverything");
         AuthorizationScope[] authorizationScopes = new AuthorizationScope[1];
         authorizationScopes[0] = authorizationScope;
-        return List.of(new SecurityReference("JWT", authorizationScopes));
+        return List.of(new SecurityReference("JWT Token", authorizationScopes));
     }
 
 }
